# proof-public-inputs

./: Cargo.toml
data/: block_proof.json  proof_with_public_inputs.json
src/: main.rs
